<resources>
    <string name="app_name">Practical Parent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kid_options">KidOptionsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_name_timer_running">Timer Running</string>
    <string name="channel_description_timer_running">Notification when timer is running</string>
    <string name="channel_name_timer_complete">Timer Complete</string>
    <string name="channel_description_timer_complete">Notification when time completes</string>
    <string name="channel_id_timer_running">CHANNEL_ID_TIMER_RUNNING</string>
    <string name="channel_id_timer_complete">CHANNEL_ID_TIMER_COMPLETE</string>
    <string name="intent_action_stop_timer">Pause Timer</string>
    <string name="intent_action_start_timer">Start Timer</string>
    <string name="intent_action_reset_timer">Reset Timer</string>
    <string name="intent_action_stop_button">Pause</string>
    <string name="intent_action_start_button">Start</string>
    <string name="intent_action_reset_button">Reset</string>
    <string name="intent_action_timer_finished">Timer Finish</string>
    <string name="intent_action_timer_finished_from_activity">Timer Finish Activity</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="starting_timer">Starting Timer</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>

    <string name="shared_preferences_start_time_in_millis">startTimeInMillis</string>
    <string name="shared_preferences_time_left_in_millis">millisLeft</string>
    <string name="shared_preferences_timer_running">timerRunning</string>
    <string name="shared_preferences_end_time">endTime</string>
    <string name="default_timer_value">00:00</string>
    <string name="custom_duration">Custom (minutes)</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="you_flipped">You Flipped:</string>
    <string name="select_a_child_to_edit_or_delete">Select a child to edit or delete</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="cardname">NAME</string>
    <string name="win_loss">WIN/LOSS</string>
    <string name="side">SIDE</string>
    <string name="card_date">DATE</string>
    <string name="outcome">Outcome</string>
    <string name="history">History</string>
    <string name="all_history">All history</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You lose</string>
    <string name="options">Options</string>
    <string name="add_child">Add Child</string>
    <string name="title_activity_coin_flip">Coin Flip</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_options">Options</string>
    <string name="choose_coin_heads_tails_no_children">Hi, \nWhat do you choose?</string>
    <string name="choose_coin_heads_tails_children">Hi %s, \nWhat do you choose?</string>
    <string name="kid_name_flips">%s\'s flips</string>
    <string name="all_flips">All flips</string>
    <string name="capture_image">Capture Image</string>
    <string name="choose_image">Choose image from gallery</string>

    <string name="edit_child_fragment_title">Select name to edit</string>


    <plurals name="radio_buttons_text_in_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="title_activity_task">Tasks</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="task">Task</string>
    <string name="task_options">Select a task to edit, delete, or mark as done</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="kid_name">kid name</string>
    <string name="done">Done</string>
    <string name="child_name">Child Name</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="images">Images:</string>
    <string name="herman_luo">- HERMAN LUO</string>
    <string name="jaydon_lau">- JAYDON LAU</string>
    <string name="trevor_bonas">- TREVOR BONAS</string>
    <string name="shubham_negi">- SHUBHAM NEGI</string>
    <string name="coin">Coin</string>
    <string name="calm_bg">Calm BG</string>
    <string name="app_icon">App Icon</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="team_raspberry">TEAM RASPBERRY</string>
    <string name="created_by">Created by:</string>
    <string name="help">Help</string>
    <string name="practical_nparent">Practical\nParent</string>
    <string name="title_activity_choose_turn">Choose Whose Turn It Is</string>
    <string name="kid_icon">Kid icon</string>
    <string name="flip_a_coin">Flip a Coin</string>
    <string name="kids">Kids</string>
    <string name="timeout">Timeout</string>
    <string name="title_activity_timeout_timer">Timeout Timer</string>
    <string name="tasks">Tasks</string>
    <string name="task_icon">Task Icon</string>
    <string name="nobody">Nobody</string>
    <string name="denied_permission_taking_picture_toast">Permission denied for taking picture</string>
    <string name="denied_permission_picking_image_toast">Permission denied for picking image</string>
    <string name="showing_all_flips_toast">Now showing all flips</string>
    <string name="showing_childs_flip_toast">Now showing child\'s flips</string>
    <string name="shared_preferences_speed_factor">speedFactor</string>
    <string name="timer_percent_speed">%d%%</string>
    <string name="timer_percent_speed_subtle">Time@%d%%</string>

    <string name="please_start_timer_first">Please start timer first!</string>
    <string name="breathe">Breathe</string>
    <string name="choose_side">Choose Side</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="helptxt">Select number of desired breaths\nPress the button to start</string>
    <string name="begin">Begin</string>
    <string name="in">In</string>
    <string name="press_and_hold">Hold button and breathe in</string>
    <string name="release">Release button and breathe out</string>
    <string name="good_job">Good job</string>
    <string name="breaths_completed">All breaths completed</string>
    <string name="out">Out</string>
    <string name="breathe_out">Breathe out</string>
    <string name="breaths_left">\"Breaths left: \"</string>

</resources>