<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/helpBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="166dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ripple_mask"
        android:text="@string/help"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintEnd_toEndOf="@+id/taskBtn"
        app:layout_constraintStart_toStartOf="@+id/taskBtn"
        app:layout_constraintTop_toBottomOf="@+id/taskBtn" />

    <Button
        android:id="@+id/taskBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="166dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ripple_mask"
        android:text="@string/tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintEnd_toEndOf="@+id/breatheBtn"
        app:layout_constraintStart_toStartOf="@+id/breatheBtn"
        app:layout_constraintTop_toBottomOf="@+id/breatheBtn" />

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/practical_nparent"
        android:textAlignment="center"
        android:textColor="#D500F9"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/familyImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/familyImage"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/family" />

    <Button
        android:id="@+id/flipBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="166dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ripple_mask"
        android:text="@string/flip_a_coin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/breatheBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="166dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ripple_mask"
        android:text="@string/breathe"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/kidsBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="166dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ripple_mask"
        android:text="@string/kids"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintEnd_toEndOf="@+id/flipBtn"
        app:layout_constraintStart_toStartOf="@+id/flipBtn"
        app:layout_constraintTop_toBottomOf="@+id/flipBtn" />

    <Button
        android:id="@+id/timeoutBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="166dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ripple_mask"
        android:text="@string/timeout"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintEnd_toEndOf="@+id/kidsBtn"
        app:layout_constraintStart_toStartOf="@+id/kidsBtn"
        app:layout_constraintTop_toBottomOf="@+id/kidsBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>