<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/changeBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="27dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ic_baseline_edit_24"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintBottom_toTopOf="@+id/headBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/greetingTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />

    <TextView
        android:id="@+id/greetingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text=""
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/headBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/headBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ripple_mask"
        android:text="@string/heads"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintBottom_toTopOf="@+id/tailsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/tailsBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="207dp"
        android:layout_height="72dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/outlined_button"
        android:fontFamily="sans-serif-medium"
        android:foreground="@drawable/ripple_mask"
        android:text="@string/tails"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6E6E6E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/orTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#6E6E6E"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tailsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/headBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        app:srcCompat="@drawable/family_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>